# Spark-Bytes-Group-1-

./: CONTRIBUTING.md  LICENSE  README.md  database.db
backend/: .gitignore  README.md  database.db  generate_hashed_password.py  pyproject.toml
backend/src/: auth.py  main.py
backend/src/db/: abstract_manager.py  session.py  sqlite_manager.py
backend/src/models/: base.py  error_models.py  event.py  list_request.py  user.py
backend/src/routers/: database_endpoints_generator.py
backend/src/utils/: register.py  registers.py  settings.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  withAuth.tsx
frontend/src/app/api/: auth.ts  auth.tsx  axiosInstance.ts  events.ts
frontend/src/app/components/: Footer.tsx  Header.tsx  LogoutButton.tsx
frontend/src/app/login_student/: page.tsx
frontend/src/app/logout/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/protected_page/: page.tsx
